--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Porfolio Website</title>
+    <link rel="stylesheet" href="styles.css\styles_portfolio.css">
 </head>
 <body>
-    
+    <div>
+        <img class="Image" src="Images_my_porfolio\DSC00878.JPG" alt="Image of Raphael">
+    </div>
+    <div class="text">
+       <h1>Raphael Atindanbila</h1>
+       <p>Student at University of Ghana Business School</p>
+       <p>Email: <a href="atindanbilar@gmail.com" target="_blank">atindanbilar@gmail.com</a></p>
+    </div>
 </body>
 </html>
